<resources>
    <string name="eventDetails" translatable="false">Enter event details       (Min.50 - Max.4000 words)</string>
    <string name="addInfo" translatable="false">Enter add-on info (optional Max.250 words)</string>
    <string name="enter_desc" translatable="false">enter description      (Min.0 - Max.200 words)</string>
    <string name="venue_desc">Description (optional)</string>
    <string name="digit_alpha">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="digit_number">0123456789</string>
    <string name="digit_phone">+0123456789</string>
    <string name="digit_alpha_number">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789</string>
    <string name="digit_password">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@#$%^</string>
    <string name="app_name">365Live Partner</string>
    <string name="loading">Loading</string>
    <string name="currency">$</string>
    <string name="faq_url">https://365live.com/profile/faq</string>
    <string name="privacy_policy_url">https://365live.com/profile/privacy-policy</string>
    <string name="terms_and_condition_url">https://365live.com/profile/terms-and-conditions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="promote">Promote</string>
    <string name="intro_desc1">spread the work and share details with your colleagues and team. You’re in control, you can manage and monitor user engagement, enjoy all of our convenient features like your RSVPs, our communication platform etc.</string>
    <string name="intro_desc2">Want to build buzz and traffic for your events. With a few quick steps, you can create and share your event with even thousands of people. We make it convenient to keep track of your sales, validate tickets plus more.</string>
    <string name="intro_desc3">We’re here to work with you to make sure that your event is a success. Promoting your events to get it in front of countless eyes, big or small so we can get more money into your accounts or your pockets promptly.</string>
    <string name="intro_shortDesc1">You can now manage your events with ease.</string>
    <string name="intro_shortDesc2">A better platform for Venues and event organizers.</string>
    <string name="intro_shortDesc3">Promotion and marketing just got easier!</string>
    <string name="get_started">Get Started</string>
    <string name="lets_started">Let\'s get started</string>
    <string name="lets_started_desc">Never a better time than now to start  thinking about how you manage  all your events with ease.</string>
    <string name="create_acc">Create Account</string>
    <string name="login">Login</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="host">Host</string>
    <string name="create_event">Create Event</string>
    <string name="post_events">Post Events</string>
    <string name="past_events">Past Events</string>
    <string name="rsvp">RSVP / Guest List</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="username_email">Email</string>
    <string name="enter_name_mail">Enter username or email</string>
    <string name="password">Password</string>
    <string name="enter_pwd">Enter password</string>
    <string name="forgot_pwd">Forgot Password</string>
    <string name="mail_err">Please enter valid email</string>
    <string name="enter_pwd_err">Enter password please</string>
    <string name="register">Register</string>
    <string name="venue">Venue</string>
    <string name="promoter">Promoter</string>
    <string name="forgot_sub_desc">Please enter email address to request a password reset.</string>
    <string name="email">Email</string>
    <string name="enter_mail">Enter your email</string>
    <string name="reset_pwd">Reset Password</string>
    <string name="reset_pwd_desc">Please enter your new password for your account.</string>
    <string name="new_pwd">New Password</string>
    <string name="conf_new_pwd">Confirm new password</string>
    <string name="varificatio_in_progress">verification in process</string>
    <string name="varification_subtitle">Thanks For Registration. Your Account  is being and we\'ll get back to you  with in 24-48 hours.</string>
    <string name="navigate_txt">Navigate</string>
    <string name="sms_verfication">SMS Verification</string>
    <string name="sms_verfication_desc">Enter your mobile number, we will send you code to verify.</string>
    <string name="enter_mob">Enter mobile</string>
    <string name="invalid_mob">please enter valid mobile number</string>
    <string name="verifiy_code">Verify Code</string>
    <string name="verify_desc">Enter 4 digit code that sent to your Email Address</string>
    <string name="verify_desc_phone">Enter 4 digit code sent to your phone</string>
    <string name="verify">Verify</string>
    <string name="txt_resend_otp">Resend OTP in</string>
    <string name="txt_resend_otp_now">Resend OTP now</string>
    <string name="signup">Sign Up</string>
    <string name="fullname">Full Name</string>
    <string name="enter_name">Enter your name</string>
    <string name="continue_txt">Continue</string>
    <string name="skip">Skip*</string>
    <string name="skip_">Skip</string>
    <string name="skip_desc">*You will be required to complete sms verification later when you start booking with 365Live</string>
    <string name="register_as_venue">Register as Venue</string>
    <string name="venue_name">Venue Name</string>
    <string name="addrs">Address</string>
    <string name="venue_address">Venue Address</string>
    <string name="website_url">Website URL</string>
    <string name="availability">Availability</string>
    <string name="guest_can_contact">Guest can contact you via</string>
    <string name="in_app_only">In App Only</string>
    <string name="allow_guest">Allow Guest to contact you ?</string>
    <string name="upload_vanue_pic">Upload Logo / Picture of the Venue</string>
    <string name="check_network">Check your connection</string>
    <string name="try_again">Something went wrong!</string>
    <string name="enter_valid_mail">enter valid email id please</string>
    <string name="mail_mandatory">Email is mandatory!</string>
    <string name="something_went_wrong">Some thing went wrong!</string>
    <string name="settings">Settings</string>
    <string name="manager_user">Manage Users</string>
    <string name="acc_settings">Accounts Settings</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="connect_social_acc">Connect Social Accounts</string>
    <string name="share">Share</string>
    <string name="term_and_cond"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="select_event_type">Select Event Type</string>
    <string name="open_event">Open Event</string>
    <string name="private_event">Private Event</string>
    <string name="select_event_cat">Select Event Category</string>
    <string name="event_cat">Event Category</string>
    <string name="align_photo">Align Photo</string>
    <string name="select_sub_cat">Select Sub Category</string>
    <string name="next">Next</string>
    <string name="create_an_event">Create an Event</string>
    <string name="basic_info">Basic Info</string>
    <string name="txt_delete_event">Delete Event</string>
    <string name="name_of_event">Name of Event</string>
    <string name="select_days">Select Day</string>
    <string name="select_months">Select Dates</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="enter_location_venue">Enter Location Venue</string>
    <string name="gallery_img">Gallery Image</string>
    <string name="additional_info">Additional Info</string>
    <string name="enter_additional_info">Provide additional info like dress code etc.</string>
    <string name="allow_guest_to_invite">Allow guest to invite</string>
    <string name="paid_event">Paid Event?</string>
    <string name="free">Free</string>
    <string name="paid">Paid</string>
    <string name="both">Both</string>
    <string name="create_ticket">Create Ticket</string>
    <string name="post_event">Post Event</string>
    <string name="availability_error">Please choose hours of operation</string>
    <string-array name="event_array">
        <item>One Time</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="paid_array">
        <item>Paid RSVP Tickets</item>
        <item>VIP RSVP Tickets</item>
    </string-array>
    <string-array name="free_array">
        <item>Free RSVP Tickets</item>
    </string-array>
    <string-array name="both_array">
        <item>Free RSVP Tickets</item>
        <item>Paid RSVP Tickets</item>
        <item>VIP RSVP Tickets</item>

    </string-array>
    <string name="title_activity_seating_and_pricing">SeatingAndPricing</string>
    <string name="please_select_tickets">Please Select Tickets</string>
    <string name="seating_and_prices"><![CDATA[Seatings & Prices]]></string>
    <string name="add_another_ticket">Add Another Ticket</string>
    <string name="ticket_name">Ticket Name</string>
    <string name="enter_ticket_name">enter ticket name</string>
    <string name="price_ticket">Price Ticket</string>
    <string name="enter_price_ticket">enter price ticket</string>
    <string name="total_ticket_qty">Total Tickets Quantity</string>
    <string name="enter_qty">enter quantity</string>
    <string name="table_and_seating">Table and Seatings</string>
    <string name="enter_categoryname">Enter Category Name</string>
    <string name="enter_category">enter category</string>
    <string name="no_of_tables">No Of Tables</string>
    <string name="person_per_table">Person Per Table</string>
    <string name="price_per_table">Price Per Table</string>
    <string name="total_seatings">Total Seatings</string>
    <string name="enter_short_desc">Enter Short Description (Optional)</string>
    <string name="enter_cancel_charges">Enter Cancellation Charges</string>
    <string name="min_cancel_charges">( Minimum of 10% is Mandatory )</string>
    <string name="add_another_cat">Add Another Category</string>
    <string name="ticket_selling_start">Ticket Selling Starts</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="venue_locations">Venue / Locations</string>
    <string name="profile">Profile</string>
    <string name="personal_details">Personal Details</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_no">Phone No.</string>
    <string name="url">URL</string>
    <string name="short_info">Short Info</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="facebook">Facebook</string>
    <string name="email_id">Email ID</string>
    <string name="price">$1140</string>
    <string name="account">Account</string>
    <string name="account_no">9214**********655</string>
    <string name="resend_ticket">Resend Ticket</string>
    <string name="cancel">Cancel</string>
    <string name="billing_add">Billing Address</string>
    <string name="contact">Contact</string>
    <string name="check_in_via_ticket">Check - in via ticket</string>
    <string name="enter_the_ticket_number">Enter the ticket number</string>
    <string name="enter_ticket_number">Enter Ticket Number</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
</resources>