<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/helvetica_bold"
                android:text="@string/check_in_via_ticket"
                android:textColor="@color/labelBlack"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/helvetica_medium"
                android:gravity="center"
                android:text="@string/enter_the_ticket_number"
                android:textColor="@color/labelBlack" />

            <EditText
                android:id="@+id/ticket_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_35sdp"
                android:fontFamily="@font/helvetica"
                android:gravity="center"
                android:hint="@string/enter_ticket_number"
                android:inputType="textCapCharacters"
                android:singleLine="true"
                android:textColor="@color/labelBlack"
                android:textColorHint="@color/grayLight"
                android:textSize="@dimen/_14ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_16sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvNoBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/blue_btn"
                    android:backgroundTint="#4da098dd"
                    android:fontFamily="@font/helvetica"
                    android:gravity="center"
                    android:text="@string/no"
                    android:textColor="@color/labelBlack"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/tvSubmitBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/blue_btn"
                    android:fontFamily="@font/helvetica"
                    android:gravity="center"
                    android:text="@string/submit"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>